# backend

./: .gitignore  README.md  pyproject.toml
src/app/: main.py
src/app/api/: includes.py
src/app/api/v1/routers/: prediction.py
src/app/api/v1/routes/: auth.py  embedding.py  organizations.py  prediction.py  projects.py  rerank.py  search.py  stripe.py  users.py  utils.py
src/app/app_secrets/: infisical.py
src/app/core/: apikeys.py  email.py  inference.py  logging.py  organizations.py  projects.py  transactions.py  users.py
src/app/database/: db.py  supabase.py
src/app/dependencies/: db.py  stripe.py  supabase.py  users.py
src/app/infisical/: infisical.py
src/app/schemas/: embedding.py  organizations.py  projects.py  stripe.py  users.py
src/app/secrets/: api_keys.py  infisical.py
src/app/tests/: embedding.py
