[project]
name = "app"
version = "0.1.0"
description = "API backend for embedding and ml server."
readme = "README.md"
authors = [
    { name = "Enrico Shippole", email = "enrico@teraflop.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "authlib>=1.5.1",
    "batched>=0.1.4",
    "fastapi[standard]>=0.115.11",
    "granian>=2.1.0",
    "infisicalsdk>=1.0.6",
    "itsdangerous>=2.2.0",
    "logfire>=3.14.1",
    "loguru>=0.7.3",
    "minio>=7.2.15",
    "msgspec>=0.19.0",
    "pgvector>=0.4.0",
    "pwdlib[argon2]>=0.2.1",
    "pytest-playwright>=0.7.0",
    "python-dotenv-vault>=0.6.4",
    "python-jose[cryptography]>=3.4.0",
    "resend>=2.8.0",
    "sentence-transformers>=4.1.0",
    "slowapi>=0.1.9",
    "stripe>=11.6.0",
    "truss>=0.9.83",
    "uvloop>=0.21.0",
    "valkey[libvalkey]>=6.1.0",
]

[project.scripts]
app = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
